--- a/views/principal/descuentos.ejs
+++ b/views/principal/descuentos.ejs
@@ -47,7 +47,11 @@
     </nav>
     <section>
     </section>
-    <p>Descuentos</p>
+    <!-- <p>Descuentos</p> -->
+     <div class="img">
+        <img src="https://ssteev.gob.mx/wp-content/uploads/2021/11/mantenimiento.jpg" alt="Fff">
+     </div>
+    
 
    <!-- Contenedor del chatbot -->
 <link rel="stylesheet" href="chatbot.css">
