--- a/public/styles/stylesRegistro.css
+++ b/public/styles/stylesRegistro.css
@@ -12,17 +12,22 @@ body {
     height: 100vh;
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(to top, #ccb593 0%, #ff6a00 100%);
+    display: flex;
+    justify-content: center;
+    margin: 10;
 }
 
 .login-container {
     height: 43.75em;
     width: 60em;
-    margin: 1em auto; /* Margen superior reducido */
+    margin: 0; /* Margen superior reducido */
     border-radius: 10px;
     display: flex;
-    justify-content: space-between;
-    overflow: hidden;
+    justify-content: flex-start;
+
+
 }
+
 
 .login-info-container {
     width: 50%;
@@ -49,25 +54,8 @@ body {
     color: var(--title-bg);
 }
 
-.social-login {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    cursor: pointer;
-}
 
-.social-login-element {
-    width: 12.5rem;
-    height: 3.75rem;
-    font-size: 1.2rem;
-    font-weight: 700;
-    letter-spacing: 0.5px;
-    border-radius: 5px;
-    border: 1px solid var(--button-bg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .social-login-element img {
     width: 1.875rem;
@@ -91,9 +79,12 @@ body {
     width: 85%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
+    gap: 1rem;
+
 }
+
+
 
 .input,
 .btn {
@@ -109,6 +100,7 @@ body {
     font-weight: 600;
     letter-spacing: 1px;
     box-sizing: border-box;
+    margin: 0;
 }
 
 .input:hover {
@@ -124,6 +116,8 @@ body {
     border-radius: 5px;
     background-color: var(--button-bg);
     cursor: pointer;
+    margin: 10px;
+
 }
 
 .inputs-container p {
